--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.4",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.0.6"
+    "mongoose": "^6.0.6",
+    "nodemon": "^2.0.13"
   }
 }
